project assignment done.

--- a/index.html
+++ b/index.html
@@ -27,47 +27,46 @@
 					This website is awesome
 				</div>
 
-				<div>
+				<div id="main-subtext">
 						Lorem ipsum dolor sit amet consectetur adipisicing
-					elit. Laborum tenetur alias fugiat esse corrupti 
-					culpa quam aut expedita numquam nostrum, dolor, 
-					saepe iure quasi facere accusantium sit. Atque, 
-					reiciendis ratione.
+					elit. Lorem ipsum dolor sit amet consectetur adipisicing
+					elit.
 				</div>
-				<button class="sign-up-button"> Sign Up </button>
+
+				<button class="sign-up-button" id="main-sign-up-button"> Sign Up </button>
 			</div>
 
 			<img src="landscape.jpeg" alt="intro-img" id="intro-img">
 		</div>
 		
 		<div class="page-section" id="section-info">
-			<div> Some random information.</div>
+			<div id="info-section-main-text"> Some random information.</div>
 
 			<div id="cards">
 				<div class="image-card">
 					<img src="library.jpeg" alt="some-image">
-					<div>
+					<div class="image-card-text">
 						some random subtext under the image. It is very random indeed.
 					</div>
 				</div>
 
 				<div class="image-card">
 					<img src="library.jpeg" alt="some-image">
-					<div>
+					<div class="image-card-text">
 						some random subtext under the image. It is very random indeed.
 					</div>
 				</div>
 
 				<div class="image-card">
 					<img src="library.jpeg" alt="some-image">
-					<div>
+					<div class="image-card-text">
 						some random subtext under the image. It is very random indeed.
 					</div>
 				</div>
 
 				<div class="image-card">
 					<img src="library.jpeg" alt="some-image">
-					<div>
+					<div class="image-card-text">
 						some random subtext under the image. It is very random indeed.
 					</div>
 				</div>
